deploy/openshift/3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab-webhooks
  labels:
    app: gitlab-webhooks
spec:
  selector:
    app: gitlab-webhooks
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 5000
