deploy/openshift/4-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: gitlab-webhooks
spec:
  to:
    kind: Service
    name: gitlab-webhooks
    weight: 100
  port:
    targetPort: 5000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
